# test_1

./: db.json  git_github.txt
HOTEL/: .env  pyproject.toml  requirements.txt
HOTEL/account/: managers.py  models.py  serializers.py  urls.py  views.py
HOTEL/config/: settings.py  urls.py
HTML_CSS/: index.html  index2.html  style.css  style2.css
basics/: comprehensions.py  data_types.py  dict_types.py  linuxs_commands.txt  lists_type.py  logical_exp.py  loops.py  pyton_commands.txt  razbor_task.py  set_type.py  str.type.py  try_except.py  yourself.py
blog_api/: .env  pyproject.toml  requirements.txt
file_/: data.csv  files.py  files_.py  json_.py  test.json  test1.txt
functions/: build-in-fuctions.py  decarators.py  functions.py  scopes.py
hackaton_/: hackaton_1_kivano.csv  main.py  pyproject.toml
http_/: http-ORM.text  pyproject.toml
http_/fastapi_proj1/: .env  main.py  migrate.py  pyproject.toml  requirements.txt  settings.py
http_/fastapi_proj1/app/: models.py  serializer.py  views.py
internet_magazin/: manage.py  pyproject.toml  requirements.txt
jwt_token/: jwt_handler.py  jwt_tokens.txt  main.py
oop/: 2_out.csv  OOP.py  abstraction.py  dunder_methods.py  encapsulation.py  inheritance.py  iter_gener.py  log,txt  methods.py  mixins.py  out.csv  solid.py  test.py  yuerself.py
parsing/: db.json  main.py  pyproject.toml  requirements.txt
pip_venv/: pip_venv.txt   pyproject.toml  requirements.txt
postgres_1/: psgl.txt  test.txt
py_tests/: pyproject.toml
redis_/: redis_main.py
telebot_/: main__.py  pyproject.toml  requirements.txt
(+32 files in other folders)
