[tool.poetry]
name = "telebot-"
version = "0.1.0"
description = ""
authors = ["nur950960 <yanshanlo2006@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytelegrambotapi = "^4.16.1"
wikipedia = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
